# CRTMv3

./: CMakeCache.txt-g  CMakeCache.txt-star  CMakeLists.txt  Get_CRTM_Binary_Files.sh  README.md  VERSION.cmake  crtm-config.cmake.in
CRTM_Coeff_BigEndian/: 2009231162830_17611_CS_2B-GEOPROF_GRANULE_P1_R05_E02_F00.nc  AerosolCoeff_liu.nc  CloudCoeff_moradi.nc4
TEST_AI_CRTM/: AI_CRTM.pro  CRTM_Model_Simulator.f90  makefile
TEST_CloudSatRadar/: CMakeLists.txt  CRTM_Forward_CloudSAT.f90  CRTM_radar_test_FWTLADK.f90  README_test  cfg.nml  crtm_cloudsat.txt  make.macros  makefile  plot_Z.py  plot_Z_crtm_obs.py  read_cloudsat_data.f90  run_crtm_Z.f90
TEST_CloudSatRadar/testinput/: AerosolCoeff.nc4  CloudCoeff.nc4  Cloud_V3.nc  atms_n21.SpcCoeff.nc  atms_n21.TauCoeff.nc  cpr_cloudsat.SpcCoeff.nc  cpr_cloudsat.TauCoeff.nc
Test_CRTM_Aircraft/: CRTM_Model_Simulator.f90  fort.60  ifort_lib.sh  junk_d  makefile
cmake/: compiler_flags_IntelLLVM_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  crtm_compiler_flags.cmake
configuration/: gfortran-debug.setup
src/: CMakeLists.txt  CRTM_ActiveSensor_Module.f90  CRTM_Adjoint_Module.f90  CRTM_Forward_Module.f90  CRTM_K_Matrix_Module.f90  CRTM_LifeCycle.f90  CRTM_Module.F90  CRTM_Tangent_Linear_Module.f90  CRTM_Version.inc
src/AtmScatter/: CRTM_CloudScatter.f90
src/Atmosphere/: CRTM_Atmosphere_Define.f90
src/Coefficients/: CRTM_MWwaterCoeff.f90  CRTM_SpcCoeff.f90
src/Coefficients/ACCoeff/: ACCoeff_IO.f90
src/Coefficients/CloudCoeff/: CloudCoeff_Define.f90
src/Coefficients/CloudCoeff/CloudCoeff_BIN2NC/: CloudCoeff_BIN2NC.f90
src/Coefficients/CloudCoeff/CloudCoeff_NC2BIN/: CloudCoeff_NC2BIN.f90  run_CloudCoeff_NC2BIN.sh
src/Coefficients/EmisCoeff/MW_Water/: MWwaterCoeff_Define.f90
src/Coefficients/EmisCoeff/MW_Water/MWwaterCoeff_CreateFile/: MWwaterCoeff_FASTEM4.f90  MWwaterCoeff_FASTEM5.f90  MWwaterCoeff_FASTEM6.f90
src/Coefficients/SpcCoeff/: SpcCoeff_Binary_IO.f90  SpcCoeff_IO.f90  SpcCoeff_netCDF_IO.f90
src/Coefficients/SpcCoeff/AntCorr/: AntCorr_Application.f90
src/Coefficients/SpcCoeff/SpcCoeff_BIN2NC/: SpcCoeff_BIN2NC.f90
src/Coefficients/SpcCoeff/SpcCoeff_Inspect/: SpcCoeff_Inspect.f90
src/Coefficients/SpcCoeff/SpcCoeff_NC2BIN/: SpcCoeff_NC2BIN.f90
src/Coefficients/TauCoeff/ODAS/ODAS_BIN2NC/: ODAS_BIN2NC.f90
src/Coefficients/TauCoeff/ODAS/ODAS_NC2BIN/: ODAS_NC2BIN.f90
src/Coefficients/TauCoeff/ODPS/ODPS_BIN2NC/: ODPS_BIN2NC.f90
src/Coefficients/TauCoeff/ODPS/ODPS_NC2BIN/: ODPS_NC2BIN.f90
src/Options/: CRTM_Options_Define.f90
src/Options/OP_Input/: OP_Input_Define.f90
src/RTSolution/: ActiveSensor_Model.f90  CRTM_Active_Sensor.f90  CRTM_RTSolution.f90  CRTM_RTSolution_Define.f90  Common_RTSolution.f90  RTV_Define.f90
src/RTSolution/ADA/: ADA_Module.f90
src/SfcOptics/: CRTM_IR_Ice_SfcOptics.f90  CRTM_IR_Land_SfcOptics.f90  CRTM_IR_Snow_SfcOptics.f90  CRTM_MW_Water_SfcOptics.f90  CRTM_VIS_Ice_SfcOptics.f90  CRTM_VIS_Land_SfcOptics.f90  CRTM_VIS_Snow_SfcOptics.f90  CRTM_VIS_Water_SfcOptics.f90
src/SfcOptics/SEcategory/: CRTM_SEcategory.f90
src/Surface/: CRTM_Surface_Define.f90
src/Utility/: Binary_File_Utility.f90
src/Utility/Test_Endian_Utility/: Test_Endian_Utility.f90
test/: CMakeLists.txt
test/mains/application/: CRTM_WRF_Chem.F90  check_tropics.f90
test/mains/application/CloudCoeff/: CloudCoeff_Inspect.f90
test/mains/application/SpcCoeff/: SpcCoeff_BIN2NC.f90
test/mains/regression/adjoint/test_Simple/: test_Simple.f90
test/mains/regression/forward/test_Downwelling_Radiance/: test_Downwelling_Radiance.f90
test/mains/regression/forward/test_User_Emissivity/: test_User_Emissivity.f90
test/mains/regression/k_matrix/test_Simple/: test_Simple.f90
test/mains/regression/k_matrix/test_User_Emissivity/: Load_Atm_Data.inc  Load_Sfc_Data.inc  test_User_Emissivity.f90
test/mains/regression/tangent_linear/test_Aircraft/: test_Aircraft.f90
test/mains/regression/tangent_linear/test_Downwelling_Radiance/: test_Downwelling_Radiance.f90
test/mains/unit/Unit_Test/: Load_Atm_Data_Bypass_Aerosol.inc  Load_Atm_Data_SingleProfile.inc  Load_Sfc_Data_SingleProfile.inc  TOP_SingleProfile.nc  Test_Options.f90  test_AD_Surface.f90  test_Aerosol_Bypass_adjoint.f90  test_Aerosol_Bypass_k_matrix.f90  test_OP.f90  test_TL_Surface.f90
test/mains/unit/input_output/test_MWwater/: test_MWwater_io.f90
